# rs2-weapon-damage-analysis

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.py  bullet_classes.pickle  bullets.json  bullets_readable.json  dataio.py  deploy.ps1  deploy.sh  fly.toml  gunicorn.py  main.py  models.py  pyproject.toml  requirements.txt  run_app.ps1  utils.py  weapon_classes.pickle  weapons.json  weapons_readable.json
.github/workflows/: codeql.yml  python-package.yml
assets/: theme-changer.js
components/: __init__.py  aio.py
db/: __init__.py  db.py  timescale.sql
pages/: charts.py  home.py  privacypolicy.py  statistics.py
requirements/: common.txt  dev.txt  prod.txt
rs2simulator/: __init__.py  app.py  main.py  utils.py
rs2simulator/assets/: cookieconsent-init.js  cookies.js  footer.html  site.css  theme-changer.js
rs2simulator/components/: __init__.py  aio.py
rs2simulator/db/: __init__.py  api.py  db.py  models.py  timescale.sql
rs2simulator/pages/: charts.py  privacypolicy.py  statistics.py
rs2simulator/scripts/: enter_sim_data.py  plot_csv.py
tests/: test_main.py  test_todo.py
