[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rs2simulator"
dynamic = ["version"]
authors = [
    { name = "tuokri", email = "tuokri@tuta.io" },
]
description = "Data visualization app for Rising Storm 2: Vietnam."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "Brotli==1.0.9",
    "Flask-Compress==1.13",
    "Flask==2.2.3",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "SQLAlchemy[mypy]==2.0.19",
    "Werkzeug==2.2.3",
    "beautifulsoup4==4.12.2",
    "certifi==2023.7.22",
    "charset-normalizer==3.2.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "dash-bootstrap-components==1.4.2",
    "dash-bootstrap-templates==1.0.8",
    "dash[celery]==2.11.1",
    "gunicorn==20.1.0",
    "idna==3.4",
    "itsdangerous==2.1.2",
    "logbook==1.6.0",
    "natsort==8.4.0",
    "numpy>=1.22.4",
    "orjson==3.9.1",
    "pandas==2.0.3",
    "plotly==5.15.0",
    "psycopg[binary,pool]==3.1.9",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3",
    "requests==2.31.0",
    "rs2simlib @ git+https://github.com/tuokri/rs2simlib@0.5.0",
    "six==1.16.0",
    "tenacity==8.2.2",
]

#[project.optional-dependencies]
#dev = [
#    "psycopg[binary,pool]==3.1.9",
#    "dash[diskcache]==2.7.0",
#]

[tool.hatch.metadata]
allow-direct-references = true

#[project.urls]
#"Homepage" = "https://github.com/tuokri/rs2simlib"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rs2simulator/_version.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "mypy",
    "pandas-stubs",
    "types-beautifulsoup4",
    "types-requests",
    # "flake8",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
types = "mypy rs2simulator --show-error-codes"
# TODO: not the intended use case...
main = "scripts/main.py"

#[tool.hatch.envs.test.overrides]
#platform.windows.scripts = [
#    'lint=.\scripts\lint.bat"',
#]

#[tool.hatch.envs.plots]
#dependencies = [
#    "matplotlib",
#]

#[tool.hatch.envs.plots.scripts]
#draw = "python scripts/draw_plots.py"

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
    "sqlalchemy.ext.mypy.plugin",
]
## TODO: fix models typing.
#exclude = [
#    "scripts/",
#    "rs2simlib/models/",
#]

[[tool.mypy.overrides]]
module = "numba"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numba.core.types"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash.exceptions"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.express"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.subplots"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.graph_objs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash_bootstrap_components"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash_bootstrap_templates"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numba.NumbaExperimentalFeatureWarning",
]

#[tool.flake8]
#per-file-ignores = [
#    "rs2simlib/fast/drag/fastdrag.py:C901",
#    "rs2simlib/drag/drag.py:C901",
#    "rs2simlib/dataio/dataio.py:C901",
#]
