[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rs2simulator"
dynamic = ["version"]
authors = [
    { name = "tuokri", email = "tuokri@tuta.io" },
]
description = "Data visualization app for Rising Storm 2: Vietnam."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy[mypy]==2.0.45",
    "beautifulsoup4==4.14.3",
    "dash-bootstrap-components==2.0.4",
    "dash-bootstrap-templates==2.1.0",
    "dash[celery]==3.4.0",
    "gunicorn==23.0.0",
    "logbook==1.9.2",
    "natsort==8.4.0",
    "numpy>=2.3.4",
    "orjson==3.11.5",
    "pandas==2.3.3",
    "plotly==6.5.2",
    "psycopg[binary,pool]==3.3.2",
    "python-dotenv==1.2.1",
    "rs2simlib @ git+https://github.com/tuokri/rs2simlib@0.7.2",
]

#[project.optional-dependencies]
#dev = [
#    "psycopg[binary,pool]==3.1.10",
#    "dash[diskcache]==2.7.0",
#]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rs2simulator/_version.py"

[tool.hatch.envs.test]
dependencies = [
    "mypy",
    "pandas-stubs",
    "pytest",
    "ruff",
    "types-beautifulsoup4",
    "types-requests",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
types = "mypy rs2simulator --show-error-codes"
lint = "ruff check ."
# TODO: not the intended use case...
main = "scripts/main.py"

#[tool.hatch.envs.test.overrides]
#platform.windows.scripts = [
#    'lint=.\scripts\lint.bat"',
#]

#[tool.hatch.envs.plots]
#dependencies = [
#    "matplotlib",
#]

#[tool.hatch.envs.plots.scripts]
#draw = "python scripts/draw_plots.py"

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = "dash"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash.exceptions"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.express"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.subplots"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.graph_objs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash_bootstrap_components"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dash_bootstrap_templates"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logbook"
ignore_missing_imports = true
